# radar_pi

./: .clang-format  .cmake-format.yaml  .drone.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILD_DEPENDENCIES.md  CHANGELOG-PLUGIN.md  CHANGELOG_PI.md  CI.md  CMakeLists.txt  CMakePlugin.cmake  Changelog.md  DEPENDENCIES.md  DR_pi.fbp  FIX_PLUGIN_INFO.md  INSTALL.md  Makefile  Plugin.cmake  README.git  README.md  RELEASE.md  SOURCE.md  ShipDriver_pi.fbp  UPDATE_PLUGIN_API.md  UPDATE_TEMPLATES.md  antora.yml  appveyor.yml  build-conf.rc  build.cmd  build.sh  config.h.in  local-build  pkg_version.sh.in  plugin.xml.in  pre-commit  radar-plugin.xml.in  scan_script.sh  shipdriver-plugin.xml.in  (+1 more)
.circleci/: config.yml
api-16/: ocpn_plugin.h  opencpn.lib
build-deps/: 0001-matrix.h-Patch-attributes-handling-wxwidgets-22790.patch  Rasbats.enc  control  control-raspbian  leamas.enc  leamas.pub  macos-cache-stamp  macos-deps  opencpn-deps.spec
buildwin/: ShipDriver.clone.bat  ShipDriver.without.clone.bat  minimal-path.bat  win_deps.bat  wxwidgets-3.2.4-584.patch
ci/: Rasbats  Rasbats.enc  Rasbats.pub  appveyor-upload.sh  appveyor.bat  beauty-build-raspbian-armhf.sh  bintray.js  check-key-password  checksum.py  circleci-build-android-arm64.sh  circleci-build-android-armhf.sh  circleci-build-android.sh  circleci-build-bionic-armhf.sh  circleci-build-buster-armhf.sh  circleci-build-buster.sh  circleci-build-debian-arm64.sh  circleci-build-debian-armhf.sh  circleci-build-debian-docker.sh  circleci-build-debian-wx31.sh  circleci-build-debian.sh  circleci-build-fedora.sh  circleci-build-flatpak-wx31.sh  circleci-build-flatpak.sh  circleci-build-focal-armhf.sh  circleci-build-macos.sh  circleci-build-mingw.sh  circleci-build-raspbian-armhf.sh  circleci-build-ubuntu-armhf.sh  circleci-upload.sh  cloudsmith-repo.sh  commons.sh  control  control-raspbian  docker-build-fedora.sh  docker-build-flatpak.sh  download-wx32.sh  drone-build-mingw.sh  drone-build-raspbian.sh  generic-build-raspbian-armhf.sh  git-push  (+20 more)
cmake/: AndroidLibs.cmake  CmakeSetup.cmake  ConfigureManifest.cmake  Flatpak.cmake  GetArch.cmake  MacosWxwidgets.cmake  Metadata.cmake  PluginCompiler.cmake  PluginConfigure.cmake  PluginGL.cmake  PluginInstall.cmake  PluginJSON.cmake  PluginLibs.cmake  PluginLocalization.cmake  PluginOptions.cmake  PluginPackage.cmake  PluginSetup.cmake  Targets.cmake  TemplateVersion  android-aarch64-toolchain.cmake  android-armhf-toolchain.cmake  fix-macos-libs.sh  metadata.cmake  version.h.in
data/: arcona.xml
debian/: changelog  control  copyright  rules
docker-armhf/: Dockerfile
docs/: antora.yml  site.yml
example/: garminxhd_txon_txoff.pcap  heading-north.txt  heading-rotating.txt
flatpak/: .gitignore  0001-flatpak-Update-API-lookup-data-dir-using-GetPluginDa.patch  Makefile  README.md  org.opencpn.OpenCPN.Plugin.DR.yaml  org.opencpn.OpenCPN.Plugin.radar.yaml  org.opencpn.OpenCPN.Plugin.shipdriver.yaml  org.opencpn.OpenCPN.wx31.Plugin.shipdriver.yaml
include/: Arpa.h  ControlType.inc  ControlsDialog.h  Doppler.h  GuardZone.h  GuardZoneBogey.h  Kalman.h  Matrix.h  MessageBox.h  OptionsDialog.h  RadarCanvas.h  RadarControl.h  RadarControlItem.h  RadarDraw.h  RadarFactory.h  (+18 more)
libs/WindowsHeaders/: CMakeLists.txt  README.md
libs/api-16/: CMakeLists.txt  ocpn_plugin.h
libs/api-16/msvc/: opencpn.lib
libs/api-17/: CMakeLists.txt  ocpn_plugin.h
libs/api-17/msvc/: opencpn.lib
libs/cpl/: CMakeLists.txt
libs/cpl/src/: cpl_conv.cpp
libs/curl/: CMakeLists.txt
libs/dsa/: CMakeLists.txt
libs/dsa/src/: dsa_utils.cpp  dsa_utils.h  mp_math.c  mp_math.h  sha1.h
libs/garminhd/: CMakeLists.txt
libs/garminhd/src/: GarminHDReceive.cpp
libs/iso8211/: CMakeLists.txt
libs/iso8211/src/: ddfrecord.cpp  ddfsubfielddefn.cpp
libs/jsoncpp/: 0001-libs-jsoncpp-Disable-bogus-diagnostics.patch  CMakeLists-org.txt  CMakeLists.txt
libs/jsoncpp/src/lib_json/: json_reader.cpp
libs/navico/: CMakeLists.txt
libs/navico/include/navico/: NavicoLocate.h  NavicoReceive.h  br4gbtype.h
libs/navico/src/: NavicoControl.cpp  NavicoReceive.cpp
libs/nmea0183/: CMakeLists.txt
libs/nmea0183/src/: LatLong.hpp  Response.hpp  expid.cpp  hdg.cpp  hdg.hpp  hdm.cpp  hdm.hpp  hdt.cpp  hdt.hpp  hexvalue.cpp  latlong.cpp  long.cpp  nmea0183.cpp  nmea0183.h  nmea0183.hpp  response.cpp  sentence.cpp  talkerid.cpp
libs/oeserverd/: CMakeLists.txt  install-flatpak.sh
libs/oeserverd/linux64/: libusb-0.1.so.4  oexserverd
libs/oeserverd/linuxarm/: oexserverd
libs/oeserverd/linuxarm/oeserverd.dir/: .directory
libs/oeserverd/linuxarm64/: oexserverd
libs/oeserverd/oeserverda_android/: oexserverd
libs/oeserverd/osx/: libsglmac-2.38.0.0.dylib.x86_64  oexserverd
libs/opencpn-glu/: CMakeLists.txt
libs/opencpn-glu/include-android/GL/: gl.h  glu.h
libs/plugingl/: CMakeLists.txt
libs/plugingl/include/: TexFont.h  pidc.h  qtstylesheet.h  shaders.h
libs/plugingl/src/: TexFont.cpp  pidc.cpp  qtstylesheet.cpp
libs/std_filesystem/: CMakeLists.txt  README.md
libs/std_filesystem/include/: std_filesystem.h
libs/tinyxml/: CMakeLists.txt
libs/wxJSON/: CMakeLists.txt
libs/wxJSON/src/: jsonval.cpp
libs/wxcurl/: CMakeLists.txt
libs/wxsvg/: CMakeLists.txt
libs/zlib/: CMakeLists.txt
libs/zlib/win/: zlib1.lib
src/emulator/: CMakeLists.txt  EmulatorControl.cpp  EmulatorControl.h  EmulatorControlSet.h  EmulatorControlsDialog.cpp  EmulatorReceive.cpp  EmulatorReceive.h  emulatortype.h
src/garminxhd/: CMakeLists.txt  GarminxHDControl.cpp  GarminxHDControl.h  GarminxHDControlSet.h  GarminxHDControlsDialog.cpp  GarminxHDReceive.cpp  GarminxHDReceive.h  garminxhdtype.h
src/raymarine/: CMakeLists.txt  RME120Control.cpp  RME120Control.h  RME120ControlSet.h  RME120Control_1.cpp  RME120Control_1.h  RME120ControlsDialog.cpp  RME120ControlsDialog.h  RME120RadarInfo.h  RME120Receive.cpp  RME120Receive.h  RME120type.h  RMQuantumControl.cpp  RMQuantumControlsDialog.cpp  RaymarineLocate.cpp  RaymarineLocate.h  RaymarineReceive.cpp
src/raymarine/include/raymarine/: RME120type.h  RaymarineCommon.h
(+366 files in other folders)
